code cleanup: pmd warnings, spelling